<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_background">

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="false">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo_cklab"
                android:layout_width="162dp"
                android:layout_height="103dp"
                android:gravity="center_horizontal"
                android:layout_gravity="center"
                android:src="@drawable/logo_cklab" />

            <TextView
                android:id="@+id/version_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textColor="@android:color/black" />
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="10dp">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_weight=".6">
                        <ImageView
                            android:id="@+id/logo_opencv"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:gravity="end"
                            android:layout_gravity="end"
                            android:src="@drawable/logo_opencv"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_weight=".4">
                        <TextView
                            android:id="@+id/opencv_title"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:gravity="start"
                            android:layout_marginTop="7dp"
                            android:text="@string/fragment_settings_construction_opencv_title"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="@android:color/black"/>
                    </LinearLayout>


                </LinearLayout>


                <TextView
                    android:id="@+id/opencv_msg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:visibility="gone"
                    android:text="@string/fragment_settings_construction_opencv_msg"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:textColor="@android:color/black" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight=".6">
                    <ImageView
                        android:id="@+id/logo_github"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:layout_gravity="end"
                        android:src="@drawable/logo_github"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight=".4">
                    <TextView
                        android:id="@+id/timesquare_title"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:gravity="start"
                        android:layout_marginTop="7dp"
                        android:text="@string/fragment_settings_construction_timesquare_title"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@android:color/black"/>
                </LinearLayout>
            </LinearLayout>

                <TextView
                    android:id="@+id/timesquare_msg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:visibility="gone"
                    android:text="@string/fragment_settings_construction_timesquare_msg"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:textColor="@android:color/black" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight=".6">
                    <ImageView
                        android:id="@+id/logo_google"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:layout_gravity="end"
                        android:src="@drawable/logo_google"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight=".4">
                    <TextView
                        android:id="@+id/google_title"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:gravity="start"
                        android:layout_marginTop="7dp"
                        android:text="@string/fragment_settings_construction_google_title"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@android:color/black"/>
                </LinearLayout>
            </LinearLayout>

                <TextView
                    android:id="@+id/google_msg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:visibility="gone"
                    android:text="@string/fragment_settings_construction_google_msg"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:textColor="@android:color/black" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>




</LinearLayout>
